<resources>
    <string name="app_name">Calculator</string>
<!--  Numbers -->
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

<!--    Operations -->
    <string name="clear">C</string>
    <string name="parentheses">()</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">÷</string>
    <string name="equal">=</string>
    <string name="plusMinus">+/-</string>
    <string name="dot">.</string>
    <string name="backspace"> </string>
<!--   general Text -->
    <string name="hintText">Enter your text</string>
    <string name="percentage">%</string>
    <string name="txtOutput" />

</resources>