<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtOutput"
        android:textSize="@dimen/outPutTextSize"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:ems="10"
        android:hint="@string/hintText"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textColorHint="@color/greyAccent"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btnMargin"
            android:background="@drawable/equal_background"
            android:onClick="equalPressed"
            android:text="@string/equal"
            android:textColor="@color/greyAccent"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@+id/btnPlus"
            app:layout_constraintStart_toStartOf="@+id/btnThree"
            app:layout_constraintTop_toBottomOf="@+id/btnThree" />

        <Button
            android:id="@+id/btnZero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btnMargin"
            android:background="@drawable/btn_background"
            android:onClick="zeroPressed"
            android:text="@string/zero"
            android:textColor="@color/greyAccent"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/btnDot"
            app:layout_constraintTop_toBottomOf="@+id/btnTwo" />

        <Button
            android:id="@+id/btnDot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btnMargin"
            android:background="@drawable/btn_background"
            android:onClick="dotPressed"
            android:text="@string/dot"
            android:textColor="@color/greyAccent"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnOne" />

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btnMargin"
            android:background="@drawable/operations_background"
            android:onClick="plusPressed"
            android:text="@string/plus"
            android:textColor="@color/greyAccent"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/btnThree"
            app:layout_constraintTop_toBottomOf="@+id/btnMinus" />

        <Button
            android:id="@+id/btnThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btnMargin"
            android:background="@drawable/btn_background"
            android:enabled="true"
            android:onClick="threePressed"
            android:text="@string/three"
            android:textColor="@color/greyAccent"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/btnTwo"
            app:layout_constraintTop_toBottomOf="@+id/btnSix" />

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btnMargin"
            android:background="@drawable/btn_background"
            android:enabled="true"
            android:onClick="twoPressed"
            android:text="@string/two"
            android:textColor="@color/greyAccent"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/btnOne"
            app:layout_constraintTop_toBottomOf="@+id/btnFive" />

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/btn_background"
            android:contentDescription="@string/backspace"
            android:enabled="true"
            android:onClick="backspacePressed"
            android:src="@drawable/ic_backspace"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/btnDivide"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btnMargin"
            android:background="@drawable/btn_background"
            android:enabled="true"
            android:onClick="onePressed"
            android:text="@string/one"
            android:textColor="@color/greyAccent"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnFour" />

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btnMargin"
            android:background="@drawable/operations_background"
            android:enabled="true"
            android:onClick="minusPressed"
            android:text="@string/minus"
            android:textColor="@color/greyAccent"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/btnSix"
            app:layout_constraintTop_toBottomOf="@+id/btnMultiply" />

        <Button
            android:id="@+id/btnSix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btnMargin"
            android:background="@drawable/btn_background"
            android:enabled="true"
            android:onClick="sixPressed"
            android:text="@string/six"
            android:textColor="@color/greyAccent"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/btnFive"
            app:layout_constraintTop_toBottomOf="@+id/btnNine" />

        <Button
            android:id="@+id/btnFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btnMargin"
            android:background="@drawable/btn_background"
            android:enabled="true"
            android:onClick="fivePressed"
            android:text="@string/five"
            android:textColor="@color/greyAccent"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/btnFour"
            app:layout_constraintTop_toBottomOf="@+id/btnEight" />

        <Button
            android:id="@+id/btnFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btnMargin"
            android:background="@drawable/btn_background"
            android:enabled="true"
            android:onClick="fourPressed"
            android:text="@string/four"
            android:textColor="@color/greyAccent"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSeven" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btnMargin"
            android:background="@drawable/operations_background"
            android:enabled="true"
            android:onClick="multiplyPressed"
            android:text="@string/multiply"
            android:textColor="@color/greyAccent"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/btnNine"
            app:layout_constraintTop_toBottomOf="@+id/btnDivide" />

        <Button
            android:id="@+id/btnNine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btnMargin"
            android:background="@drawable/btn_background"
            android:enabled="true"
            android:onClick="ninePressed"
            android:text="@string/nine"
            android:textColor="@color/greyAccent"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/btnEight"
            app:layout_constraintTop_toBottomOf="@+id/btnPlusMinus" />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btnMargin"
            android:background="@drawable/btn_background"
            android:enabled="true"
            android:onClick="eightPressed"
            android:text="@string/eight"
            android:textColor="@color/greyAccent"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/btnSeven"
            app:layout_constraintTop_toBottomOf="@+id/btnParentheses" />

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btnMargin"
            android:background="@drawable/btn_background"
            android:enabled="true"
            android:onClick="sevenPressed"
            android:text="@string/seven"
            android:textColor="@color/greyAccent"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnClear" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btnMargin"
            android:background="@drawable/clear_background"
            android:clickable="true"
            android:enabled="true"
            android:focusable="true"
            android:onClick="clearPressed"
            android:text="@string/clear"
            android:textColor="@color/greyAccent"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnBack" />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btnMargin"
            android:background="@drawable/operations_background"
            android:enabled="true"
            android:onClick="dividePressed"
            android:text="@string/divide"
            android:textColor="@color/greyAccent"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/btnPlusMinus"
            app:layout_constraintTop_toBottomOf="@+id/btnBack" />

        <Button
            android:id="@+id/btnPlusMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btnMargin"
            android:background="@drawable/btn_background"
            android:enabled="true"
            android:onClick="plusMinusPressed"
            android:text="@string/plusMinus"
            android:textColor="@color/greyAccent"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/btnParentheses"
            app:layout_constraintTop_toBottomOf="@+id/btnBack" />

        <Button
            android:id="@+id/btnParentheses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btnMargin"
            android:background="@drawable/btn_background"
            android:enabled="true"
            android:onClick="parenthesesPressed"
            android:text="@string/parentheses"
            android:textColor="@color/greyAccent"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/btnClear"
            app:layout_constraintTop_toBottomOf="@+id/btnBack" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>